--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ quarter: "Spring 2025"
 slides_url: https://drive.google.com/drive/folders/1a7vy_RIU21zM9rZ0bHaPg5XrXwEOB7i4?usp=sharing
 # ### TODO: check navigation.yml for top-bar links
 piazza_url: https://edstem.org/us/courses/77556/discussion
-gradescope_url: 
+gradescope_url: https://www.gradescope.com/courses/1011615/assignments
 
 
 github_url: https://github.com/ucsb-cs9/s25
@@ -100,7 +100,7 @@ defaults:
       path: ""
       type: hwk
     values:
-      layout: hwk
+      layout: lab
   - 
     scope:
       path: ""
